--- a/desafios/portfolio/css/query-style.css
+++ b/desafios/portfolio/css/query-style.css
@@ -47,6 +47,8 @@
         display: flex;
         grid-area: sider2;
         max-width: 450px;
+        /* flex-direction: column; */
+        justify-content: center;
 
     }
 
