--- a/desafios/portfolio/css/query-style.css
+++ b/desafios/portfolio/css/query-style.css
@@ -53,6 +53,10 @@
 
     }
 
+    .sider-tech > div{
+        display: flex;
+    }
+
     .sider-expe{
         display: flex;
         grid-area: sider3;
