--- a/desafios/portfolio/css/style.css
+++ b/desafios/portfolio/css/style.css
@@ -345,6 +345,11 @@ div .item-loc > a p{
     width: 465px;
     /* height: 25vh; */
     justify-content: space-between;
+    transition: 0.3s;
+}
+
+.projects-md:hover{
+    transform: scale(1.03);
 }
 
 .projects-md p{
@@ -474,6 +479,11 @@ div .item-loc > a p{
     margin-bottom: 20px;
     width: 100%;
     /* height: 20vh; */
+    transition: 0.3s;
+}
+
+.post-rec:hover{
+    transform: scale(1.02);
 }
 
 .post-rec img{
